--- a/Ball-sorting-puzzle.csproj
+++ b/Ball-sorting-puzzle.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Ball_sorting_puzzle</RootNamespace>
     <StartupObject>Ball_sorting_puzzle.Program</StartupObject>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
