--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,20 @@ FakesAssemblies/
 obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.assets.cache
 UnitTests/obj/Debug/netcoreapp2.1/UnitTests.csproj.AssemblyReference.cache
 obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.assets.cache
+bin/Debug/netcoreapp2.1/Ball-sorting-puzzle.dll
+bin/Debug/netcoreapp2.1/Ball-sorting-puzzle.pdb
+bin/Debug/netcoreapp2.1/Ball-sorting-puzzle.dll
+bin/Debug/netcoreapp2.1/Ball-sorting-puzzle.pdb
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.assets.cache
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.csproj.AssemblyReference.cache
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.dll
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.pdb
+obj/Ball-sorting-puzzle.csproj.nuget.cache
+obj/Ball-sorting-puzzle.csproj.nuget.dgspec.json
+obj/Ball-sorting-puzzle.csproj.nuget.g.props
+obj/project.assets.json
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.assets.cache
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.csproj.AssemblyReference.cache
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.dll
+obj/Debug/netcoreapp2.1/Ball-sorting-puzzle.pdb
+UnitTests/obj/Debug/netcoreapp2.1/UnitTests.csproj.AssemblyReference.cache
