--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,8 @@ steps:
   inputs:
     command: 'build'
     projects: '**/Ball-sorting-puzzle.csproj'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: '**/UnitTests.csproj'
